--- a/Cozy_Cuisine/Views/Home/Wiki.cshtml
+++ b/Cozy_Cuisine/Views/Home/Wiki.cshtml
@@ -5,35 +5,35 @@
 <!--wikigame items-->
 <div class="cont3 container-fluid p-5 mt-5">
     <div class="container">
-                <div class="container mt-4">
-                    <ul class="recentnavtabs nav nav-tabs fs-4" id="myTab" role="tablist">
-                        <li class="nav-item me-2" role="presentation">
-                            <button class="recenttabs nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">Food</button>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="recenttabs nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Ingredients</button>
-                        </li>
+        <div class="container mt-4">
+            <ul class="recentnavtabs nav nav-tabs fs-4" id="myTab" role="tablist">
+                <li class="nav-item me-2" role="presentation">
+                    <button class="recenttabs nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">Food</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="recenttabs nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Ingredients</button>
+                </li>
 
-                    </ul>
-                    <div class="tabcont tab-content" id="myTabContent">
-                        <!--food-->
-                        <div class="tab-pane fade show active p-4" id="tab1" role="tabpanel">
-                            <div class="tuttabtitle fs-4">
-                                TUTORIALS
-                            </div>
+            </ul>
+            <div class="tabcont tab-content" id="myTabContent">
+                <!--food-->
+                <div class="tab-pane fade show active p-4" id="tab1" role="tabpanel">
+                    <div class="tuttabtitle fs-4">
+                        TUTORIALS
+                    </div>
                     <div class="tutcontt py-3 px-5 my-3">
-                                <div>
-                                    <img src="~/img/preping.png" class="tutimg img-fluid" alt="Alternate Text" />
-                                </div>
-                                <div class="p-5">
-                                    <div class="tuttitle fs-3">
-                                        How to Cook
-                                    </div>
-                                    <div class="tutdescrip fs-3">
-                                        Gather ingredients, drag them to the craft slot, and auto-create meals.
-                                    </div>
-                                </div>
+                        <div>
+                            <img src="~/img/preping.png" class="tutimg img-fluid" alt="Alternate Text" />
+                        </div>
+                        <div class="p-5">
+                            <div class="tuttitle fs-3">
+                                How to Cook
                             </div>
+                            <div class="tutdescrip fs-3">
+                                Gather ingredients, drag them to the craft slot, and auto-create meals.
+                            </div>
+                        </div>
+                    </div>
                     <div class="tutcontt py-3 px-5 my-3">
                         <div>
                             <img src="~/img/preping.png" class="tutimg img-fluid" alt="Alternate Text" />
@@ -53,82 +53,82 @@
                         </div>
                         <div class="p-5">
                             <div class="tuttitle fs-3">
-                                How to CookHow to Customize
+                                How to Customize
                             </div>
                             <div class="tutdescrip fs-3">
                                 Use tokens to change kiosk colors, add decor, and unlock new clothing.
                             </div>
                         </div>
                     </div>
-                            
-                        </div>
 
-                        <!--ingredients-->
-                        <div class="tab-pane fade p-4" id="tab2" role="tabpanel">
-                            <div class="titletabb fs-3">
-                                Ingredients
-                            </div>
-                            <div class="meals row mb-3">
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="meals row">
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="fudcol btn rounded-0">
-                                        <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+                </div>
 
+                <!--ingredients-->
+                <div class="tab-pane fade p-4" id="tab2" role="tabpanel">
+                    <div class="titletabb fs-3">
+                        Ingredients
+                    </div>
+                    <div class="meals row mb-3">
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="meals row">
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
+                        <div class="col-2">
+                            <button class="fudcol btn rounded-0">
+                                <img src="~/img/fudsamp.png" class="img-fluid" alt="...">
+                            </button>
+                        </div>
                     </div>
                 </div>
+
             </div>
-            
         </div>
+    </div>
+
+</div>
 
 
 <div class="cont2 container-fluid p-5">
@@ -213,7 +213,7 @@
             </div>
         </div>
         <div class="tipscontt row rounded-4 overflow-hidden mb-3">
-            
+
             <div class="tipstxtcont col-md-8 p-4 d-flex flex-column justify-content-center">
                 <div class="tipstitle mb-3">
                     Create a List
