--- a/Cozy_Cuisine/Views/Home/Index.cshtml
+++ b/Cozy_Cuisine/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
                                 Head to the market and pick the fresh ingredients you’ll need.
                             </div>
                         </div>
-                    </div>    
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <div class="row">
@@ -319,22 +319,22 @@
                                         }
                                     }
                                 </div>
-                            
 
-                            <!-- Custom Prev/Next Buttons for Swiper -->
-                            <button class="carousel-control-prev ingredient-prev" type="button">
-                                <span class="howbtn p-3 rounded-3" aria-hidden="true">
-                                    <i class="fa-solid fa-chevron-left fa-2xl" style="color: #603F26;"></i>
-                                </span>
-                            </button>
 
-                            <button class="carousel-control-next ingredient-next" type="button">
-                                <span class="howbtn p-3 rounded-3" aria-hidden="true">
-                                    <i class="fa-solid fa-chevron-right fa-2xl" style="color: #603F26;"></i>
-                                </span>
-                            </button>
+                                <!-- Custom Prev/Next Buttons for Swiper -->
+                                <button class="carousel-control-prev ingredient-prev" type="button">
+                                    <span class="howbtn p-3 rounded-3" aria-hidden="true">
+                                        <i class="fa-solid fa-chevron-left fa-2xl" style="color: #603F26;"></i>
+                                    </span>
+                                </button>
+
+                                <button class="carousel-control-next ingredient-next" type="button">
+                                    <span class="howbtn p-3 rounded-3" aria-hidden="true">
+                                        <i class="fa-solid fa-chevron-right fa-2xl" style="color: #603F26;"></i>
+                                    </span>
+                                </button>
+                            </div>
                         </div>
-                    </div>
 
                         <!-- Equipments -->
                         <div class="tab-pane fade p-4" id="tab2" role="tabpanel">
@@ -399,7 +399,7 @@
                                         <i class="fa-solid fa-chevron-right fa-2xl" style="color: #603F26;"></i>
                                     </span>
                                 </button>
-                            
+
                             </div>
                         </div>
                     </div>
@@ -410,7 +410,7 @@
                 <div class="fudpiccont container m-0 p-0 h-100">
                     <div class="p-4 text-center">
                         <!-- Food image iframe -->
-                        <iframe id="foodImage" class="img-fluid fudpic" width="100%" height="200" style="border: none;" alt="..."></iframe>
+                        <iframe id="foodImage" class="img-fluid fudpic" style="border: none;" alt="..."></iframe>
                     </div>
                     <div class="text-end">
                         <span id="foodName" class="fudname fs-1 p-3"></span>
@@ -419,11 +419,11 @@
                 </div>
             </div>
         </div>
-     
+
     </div>
 </div>
 
-@section Scripts{
+@section Scripts {
     <script>
         $(document).ready(function() {
             // Auto-click the first button inside the meals container when the page loads
@@ -461,3 +461,4 @@
     </script>
 
 }
+        
